# carbon

./: .dockerignore  .env.example  .gitattributes  .gitignore  .opencode.json  AGENTS.md  BACKWARD_COMPATIBILITY.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  MES-FEEDBACK-STATUS.md  MES-PHASE2-DONE.md  MES-PHASE2-TEST-PLAN.md  PICKING-LIST-DEMO-PREP.md  PICKING-LIST-DEMO.md  PICKING-LIST-TESTING.md  PRD-import-bom-bop.md  PRD-step-reference-images.md  README.md  agent-browser.json  aws-govcloud-resources.md  biome.jsonc  chase_test.txt  conductor.json  docker-compose.dev.yml  docker-compose.prod.yml  lingui.config.js  package-lock.json  package.json  pickinglistreq.md  pnpm-lock.yaml  pnpm-workspace.yaml  pricelistreq.md  setup.sh  skills-lock.json  sst.config.ts  turbo.json
.ai/: ATTRIBUTION.md  ds-rules.md  lessons.md
.ai/daily-notes/: 2026-07-06.md
.ai/docs/: loop-system.md  module-conventions.md  outer-loop.md
.ai/plans/: 2026-07-02-bank-reconciliation-phase-1.md  2026-07-02-budgeting.md  2026-07-02-financial-reporting.md  2026-07-02-ledger-query-performance.md  2026-07-02-ledger-snapshot-delta.md  2026-07-02-period-closing.md  2026-07-03-job-operation-batching.md  2026-07-03-multi-jurisdiction-tax.md  2026-07-03-public-company-readiness-roadmap.md  2026-07-04-animated-work-instructions.md  2026-07-04-avalara-integration-foundation.md  2026-07-05-assembly-planner-v3.md  2026-07-06-assembly-visual-motion-camera-editor.md  2026-07-06-bom-driven-subassembly-planning.md  2026-07-06-finite-capacity-scheduling.md  2026-07-06-order-preserving-motion-replan.md  2026-07-06-planner-regression-fix.md  2026-07-06-planner-secured-last-and-gaskets.md  2026-07-07-assembly-part-to-component-rename.md  2026-07-08-gantt-real-schedule-data.md  2026-07-08-standard-costing.md  2026-07-09-accounting-sync-engine-phase-ab.md  2026-07-09-accounting-sync-engine-phase-c.md  2026-07-09-accounting-sync-engine-phase-d.md  2026-07-09-assembly-sequence-connectivity.md  2026-07-10-geometry-rs-implementation.md  2026-07-10-geometry-service-rust-rewrite.md  2026-07-10-purchase-cost-layer-gl-consistency.md  2026-07-11-period-close-ui-test-plan.md  2026-07-12-change-orders-top-to-bottom.md  2026-07-13-change-orders-v2-reuse-method-tables.md  2026-07-13-co-conflict-resolver.md  2026-07-13-raw-materials-finished-goods-accounts.md  2026-07-14-inventory-value-report.md  2026-07-14-quote-line-markup-preservation.md  2026-07-14-service-make-to-order-jobs.md  2026-07-14-user-select-rewrite.md  2026-07-15-assembler-deployment-code.md  2026-07-15-assembler-deployment.md  2026-07-15-gltf-glb-streaming-repack.md  (+6 more)
.ai/playbooks/: account-ledger-drilldown.md  assembly-instructions-editor.md  backup-restore-roundtrip.md  backups-onboarding-test-path.md  change-order-new-part-consolidation.md  eco.md  material-supersession.md  onboarding-checklist-toggle.md  user-select.md
.ai/qa/: AGENTS.md
.ai/research/: 2026-07-19-co-part-consolidation.md  3d-model-cad-capabilities.md  bank-reconciliation.md  budgeting.md  enterprise-iac-byoc-deployment.md  extensibility-architecture.md  financial-reporting.md  inbound-freight-landed-cost.md  inventory-adjustment-gl-posting.md  inventory-valuation-variances.md  inventory-value-report.md  job-operation-batching.md  multi-jurisdiction-tax.md  overhead-absorption-job-costing.md  period-closing.md  plaid-bank-feeds.md  public-company-compliance.md  (+5 more)
.cargo/: config.toml
.claude/: launch.json
.conductor/: settings.toml
.deepsec/: README.md  deepsec.config.ts  pnpm-lock.yaml
.husky/: post-merge  pre-commit
.ralphy/: config.yaml
apps/assembler/: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  build.rs  occt.Dockerfile  package.json  sst.config.ts
apps/assembler/occt-patches/: 0001-common-base-allocator-thread-local.patch  apply.sh
apps/assembler/scripts/: build-occt.sh
apps/assembler/src/: cache.rs  config.rs  dispatch.rs  error.rs  formats.rs  http.rs  jobs.rs  main.rs  plan_jobs.rs  progress.rs  run.rs
apps/assembler/src/actions/: compact.rs  convert.rs  mod.rs  optimize.rs  plan.rs
ci/: package.json
contrib/: README.md
crates/collision/: Cargo.toml  build.rs
crates/collision/src/: lib.rs  shim.cc  shim.h
crates/collision/tests/: calibration.json  calibration.rs
crates/converter/: Cargo.toml
crates/converter/examples/: conc_convert.rs  convert_file.rs  dump_tree.rs  make_xbf.rs  mesh_diff.rs
crates/converter/src/: convert.rs  glb.rs  graph.rs  lib.rs  nodeid.rs
crates/converter/tests/: convert_parity.rs  multibody_split.rs  xbf_parity.rs
crates/draco-bridge/: Cargo.toml  build.rs
crates/draco-bridge/src/: lib.rs  shim.cc  shim.h
crates/occt-bridge/: Cargo.toml  build.rs
crates/occt-bridge/examples/: conc_read.rs
crates/occt-bridge/src/: lib.rs  occt.cc  occt.h
crates/optimize/: AGENTS.md  Cargo.toml
crates/optimize/examples/: optimize_file.rs
crates/optimize/src/: codec.rs  ingest.rs  lib.rs
crates/planner/: Cargo.toml
crates/planner/examples/: bench_plan.rs  contact_probe.rs  plan_file.rs  stress.rs
crates/planner/src/: collide.rs  consts.rs  contains.rs  fasteners.rs  geom.rs  greedy.rs  lib.rs  npy.rs  pipeline.rs  pipeline2.rs  stability.rs  steps.rs  types.rs  view.rs
crates/planner/tests/: plan_step_smoke.rs  synthetic_plan.rs
docs/: .gitignore  next.config.mjs  package.json  result-error-demo.md  source.config.ts  tsconfig.json
playbooks/: backup-export-download.md  create-credit-debit-memo.md
scripts/: check-translation-keys.ts  gen-supabase-keys.mjs  generate-agent-kb.ts  generate-db-types.ts  generate-mcp.ts  generate-swagger-docs.ts  notification-test.ts  restore-database.sh  setup-env-files.ts  sync-lingui-pl.ts
services/geometry/: Dockerfile  README.md  pyproject.toml
services/geometry/app/: auth.py  config.py  convert.py  errors.py  glb.py  main.py  optimize.py  plan.py  schemas.py
services/geometry/tests/: conftest.py  test_api.py  test_convert.py  test_endpoint.py  test_limits.py  test_optimize.py  test_plan.py
services/geometry/tests/fixtures/: make_fixtures.py
(+3391 files in other folders)
