[workspace]
resolver = "2"
members = ["crates/*", "apps/assembler"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# Release-with-symbols for profiling (samply). Optimized, keeps debug info +
# frame pointers so native stacks symbolicate. Build: `cargo build --profile profiling`.
[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
