[package]
name = "planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
collision = { path = "../collision" }
converter = { path = "../converter" }
cxx = "1"
hex = "0.4.3"
nalgebra.workspace = true
ndarray = "0.16"
ndarray-linalg = { version = "0.17", features = ["openblas-system"] }
rayon = "1.10"
regex = "1"
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
smallvec = "1.13"

[target.'cfg(target_os = "linux")'.dev-dependencies]
tikv-jemallocator = "0.6"
