[project]
name = "carbon-geometry"
version = "0.1.0"
description = "Carbon geometry service: STEP -> GLB + graph.json conversion (OCCT/XCAF)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "httpx==0.28.1",
    "cadquery-ocp==7.9.3.1.1",
    "numpy==2.4.6",
    "pygltflib==1.16.5",
    "trimesh==4.5.3",
    "python-fcl>=0.7.0.6",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "manifold3d>=3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
